--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,13 @@
 				<version>${spring-boot.version}</version>
 			</dependency>
 
-
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-test</artifactId>
+				<version>${spring-boot.version}</version>
+				<scope>test</scope>
+			</dependency>
+			
 			<dependency>
 				<groupId>com.google.code.gson</groupId>
 				<artifactId>gson</artifactId>
